# Power-Analyzer

./: .gitmodules  README.md
software/: CMakeLists.txt  build.sh
software/include/: button.h  encoder.h  flash.h  ft6236.h  settings.h  tft.h  version.h
software/src/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOSConfig_examples_common.h  button.c  encoder.cc  flash.c  ft6236.c  indev.c  lv_conf.h  main.c  memmap_default.ld  tft.c  tft_ili9488.c  tft_r61509v.c  ui
software/src/cmake/: ili9488.cmake  r61509v.cmake
software/src/lv_i18n/: lv_i18n.c
software/src/pio/: i80.c
software/src/porting/: lv_port_indev_template.c  lv_port_indev_template.h
software/src/ui/: actions.h  eez-flow-lz4.h  eez-flow.h  images.c  images.h  screens.c  screens.h  ui.c  ui_font_fsex18.c  ui_font_ns14.c  ui_font_ns24.c
software/src/ui_ext/: page_home.c  page_settings.c  page_statistics.c  page_usb.c  settings.c  ui_ext.c  ui_ext.h
software/translations/: en-GB.yml  en-US.yml  zh-CN.yml
ui/: power-analyzer.eez-project  power-analyzer.eez-project-ui-state
ui/src/ui/: actions.h  eez-flow-lz4.c  eez-flow.cpp  eez-flow.h  fonts.h  screens.c  screens.h  ui.c  ui.h  ui_font_fsex24.c  ui_font_fsex72.c  ui_font_notosans18.c  ui_font_ns14.c  ui_font_ns18.c  ui_image_meter.c
